# tg-auto-digest

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yaml
.specify/memory/: constitution.md
docker/: Dockerfile  compose.yaml
docs/: initial.md
specs/001-telegram-radar-digest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-telegram-radar-digest/checklists/: requirements.md
specs/001-telegram-radar-digest/contracts/: bot-commands.md  internal-interfaces.md
specs/002-clean-arch-tdd-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-clean-arch-tdd-refactor/checklists/: requirements.md
specs/002-clean-arch-tdd-refactor/contracts/: protocols.md
specs/003-bot-telethon-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-bot-telethon-auth/checklists/: requirements.md
specs/003-bot-telethon-auth/contracts/: bot-auth-flow.md
specs/004-start-reset-bot-menu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-start-reset-bot-menu/checklists/: requirements.md
specs/004-start-reset-bot-menu/contracts/: bot-commands.md
src/telegram_radar/: __main__.py  batch_builder.py  bot.py  digest_builder.py  gateway.py  models.py  pipeline.py  protocols.py  scheduler.py  settings.py  state.py  summarizer.py
tests/: test_bot_auth.py  test_gateway_auth.py
tests/unit/: test_batch_builder.py  test_digest_builder.py  test_pipeline.py  test_state.py
